Repositionnement du disk, centrer. Changer les éléments de page. Changement police

--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 /* menu de navigation top bar */
+header {
+	position: fixed;
+}
+.disk_container {
+	position: relative;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
 .menu_top {
 	background-color: #2e282a;
 }
@@ -7,35 +16,38 @@
 }
 .disk {
 	display: block;
-	margin: -30% auto auto 25%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+
 	position: absolute;
 }
 @-webkit-keyframes rotating /* Safari and Chrome */ {
 	from {
-		-webkit-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
-		transform: rotate(0deg);
+		-webkit-transform: translate(-50%, -50%) rotate(0deg);
+		-o-transform: translate(-50%, -50%) rotate(0deg);
+		transform: translate(-50%, -50%) rotate(0deg);
 	}
 	to {
-		-webkit-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
+		-webkit-transform: translate(-50%, -50%) rotate(360deg);
+		-o-transform: translate(-50%, -50%) rotate(360deg);
+		transform: translate(-50%, -50%) rotate(360deg);
 	}
 }
 @keyframes rotating {
 	from {
-		-ms-transform: rotate(0deg);
-		-moz-transform: rotate(0deg);
-		-webkit-transform: rotate(0deg);
-		-o-transform: rotate(0deg);
-		transform: rotate(0deg);
+		-ms-transform: translate(-50%, -50%) rotate(0deg);
+		-moz-transform: translate(-50%, -50%) rotate(0deg);
+		-webkit-transform: translate(-50%, -50%) rotate(0deg);
+		-o-transform: translate(-50%, -50%) rotate(0deg);
+		transform: translate(-50%, -50%) rotate(0deg);
 	}
 	to {
-		-ms-transform: rotate(360deg);
-		-moz-transform: rotate(360deg);
-		-webkit-transform: rotate(360deg);
-		-o-transform: rotate(360deg);
-		transform: rotate(360deg);
+		-ms-transform: translate(-50%, -50%) rotate(360deg);
+		-moz-transform: translate(-50%, -50%) rotate(360deg);
+		-webkit-transform: translate(-50%, -50%) rotate(360deg);
+		-o-transform: translate(-50%, -50%) rotate(360deg);
+		transform: translate(-50%, -50%) rotate(360deg);
 	}
 }
 #rotating {
@@ -57,6 +69,8 @@
 }
 ul {
 	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 body {
 	background-color: #2e282a;
@@ -76,11 +90,16 @@ body {
 	color: white;
 }
 .cadre_presentation {
-	padding: 50px;
-	margin: -17% auto auto -5%;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	position: absolute;
 }
 
 /* style du footer  */
 .fab {
 	font-size: 50px;
+}
+body {
+	margin: 0;
 }
